# Note_app

./: READM.md  README.md  docker-compose.yml
backend/: .editorconfig  .env.local  .gitignore  Dockerfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt  run_asgi.py
backend/backend/config/: api.py  asgi.py  auth.py  urls.py  wsgi.py
backend/backend/config/settings/: base.py  local.py  production.py
backend/backend/core/: adapters.py  admin.py  apis.py  apps.py  context_processors.py  exceptions.py  forms.py  managers.py  models.py  schemas.py  utils.py
backend/backend/core/migrations/: 0001_initial.py
backend/backend/jet/: filters.py  forms.py  models.py  ordered_set.py  settings.py  urls.py  utils.py  views.py
backend/backend/jet/dashboard/: dashboard.py  forms.py  models.py  modules.py  settings.py  urls.py  views.py
backend/backend/jet/dashboard/dashboard_modules/: google_analytics.py  google_analytics_views.py  yandex_metrika.py  yandex_metrika_views.py
backend/backend/jet/dashboard/migrations/: 0001_initial.py  0002_initial.py
backend/backend/jet/dashboard/south_migrations/: 0001_initial.py
backend/backend/jet/dashboard/templatetags/: jet_dashboard_tags.py
backend/backend/jet/management/commands/: jet_custom_apps_example.py  jet_side_menu_items_example.py
backend/backend/jet/migrations/: 0001_initial.py  0001_squashed_0004_auto_20201228_1802.py  0003_auto_20201228_1540.py  0004_auto_20201228_1802.py  0005_alter_bookmark_id_alter_pinnedapplication_id.py
backend/backend/jet/south_migrations/: 0001_initial.py  0002_auto__del_userdashboardmodule.py
backend/backend/jet/templates/admin/: base.html
backend/backend/jet/templatetags/: jet_tags.py
backend/backend/jet/tests/: dashboard.py  models.py  settings.py  test_dashboard.py  test_filters.py  test_ordered_set.py  test_tags.py  test_utils.py  test_views.py  urls.py
backend/backend/note/: admin.py  apis.py  apps.py  models.py  schemas.py
backend/backend/note/migrations/: 0001_initial.py  0002_alter_notemodel_note_book.py  0003_rename_is_pinned_notemodel_is_trash.py
backend/logs/: logs.md
frontend/: package-lock.json
frontend_streamlit/: .env.local  .gitignore  Home.py  config.py  pyproject.toml  requirements.txt
frontend_streamlit/src/: utils.py
